# hyp

./: env-record.yml  environment.yml  hyp.py  pyproject.toml  test_hyp.py
.github/workflows/: python-app.yml  python-package.yml
src/hyp/: hyp.py
tests/: test_hyp.py
